--- a/app/templates/users.hbs
+++ b/app/templates/users.hbs
@@ -1,9 +1,3 @@
 <h2>List of Users</h2>
 
-<ul>
-    {{#each model as |user|}}
-    <li>{{user}}</li>
-    {{/each}}
-</ul>
-
-{{user-list title="List of Users" users=model}}
+{{user-list title="List of Users" users=users}}
